# tasks

./: .bashrc  .gitignore  .tasks.txt.swo  .vimrc  styleguide.txt
tasks/: Cargo.toml  tasks.txt
tasks/src/: .lib.rs.swm  .lib.rs.swn  .lib.rs.swo  .task_info.rs.swo  galaga.rs  lib.rs  main.rs  task_info.rs  tasks.rs
test_setup/: Cargo.toml
test_setup/src/: lib.rs
