[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
gag = "1.0.0"
random_word = { version = "0.4.0", features = ["fr"] }
rot13 = "0.1.1"
test_setup = {path="/home/shared/test_setup"}
tokio = {version = "1.44.0", features = ["time", "rt"]}

[lib]
doctest = false

[features]
tasks = []
task1_1 = ["tasks"]
task1_1_info = []
task1_2 = ["tasks"]
task1_2_info = []
task1_3 = ["tasks"]
task1_3_info = []
task1_4 = ["tasks"]
task1_4_info = []
task1_5 = ["tasks"]
task1_5_info = []
task1_6 = ["tasks"]
task1_6_info = []

task2_1 = ["tasks"]
task2_1_info = []
task2_2 = ["tasks"]
task2_2_info = []
task2_3 = ["tasks"]
task2_3_info = []
task2_4 = ["tasks"]
task2_4_info = []
task2_5 = ["tasks"]
task2_5_info = []
task2_6 = ["tasks"]
task2_6_info = []
task2_7 = ["tasks"]
task2_7_info = []
task2_8 = ["tasks"]
task2_8_info = []

task3_1 = ["tasks"]
task3_1_info = []
task3_2 = ["tasks"]
task3_2_info = []
task3_3 = ["tasks"]
task3_3_info = []
task3_4 = ["tasks"]
task3_4_info = []
task3_5 = ["tasks"]
task3_5_info = []
task3_6 = ["tasks"]
task3_6_info = []
task3_7 = ["tasks"]
task3_7_info = []
task3_8 = ["tasks"]
task3_8_info = []

task4_1 = ["tasks"]
task4_1_info = []
task4_2 = ["tasks"]
task4_2_info = []
task4_3 = ["tasks"]
task4_3_info = []
task4_4 = ["tasks"]
task4_4_info = []
task4_5 = ["tasks"]
task4_5_info = []
task4_6 = ["tasks"]
task4_6_info = []
task4_7 = ["tasks"]
task4_7_info = []
task4_8 = ["tasks"]
task4_8_info = []


task5_1 = ["tasks"]
task5_1_info = []
task5_2 = ["tasks"]
task5_2_info = []
task5_3 = ["tasks"]
task5_3_info = []
task5_4 = ["tasks"]
task5_4_info = []
task5_5 = ["tasks"]
task5_5_info = []
task5_6 = ["tasks"]
task5_6_info = []
task5_7 = ["tasks"]
task5_7_info = []
task5_8 = ["tasks"]
task5_8_info = []

task6_1 = ["tasks"]
task6_1_info = []
task6_2 = ["tasks"]
task6_2_info = []
task6_3 = ["tasks"]
task6_3_info = []
task6_4 = ["tasks"]
task6_4_info = []
task6_5 = ["tasks"]
task6_5_info = []
task6_6 = ["tasks"]
task6_6_info = []
task6_7 = ["tasks"]
task6_7_info = []
task6_8 = ["tasks"]
task6_8_info = []

task7_1 = ["tasks"]
task7_1_info = []
task7_2 = ["tasks"]
task7_2_info = []
task7_3 = ["tasks"]
task7_3_info = []
task7_4 = ["tasks"]
task7_4_info = []
task7_5 = ["tasks"]
task7_5_info = []
task7_6 = ["tasks"]
task7_6_info = []
task7_7 = ["tasks"]
task7_7_info = []
task7_8 = ["tasks"]
task7_8_info = []

task8_1 = ["tasks"]
task8_1_info = []
task8_2 = ["tasks"]
task8_2_info = []
task8_3 = ["tasks"]
task8_3_info = []
task8_4 = ["tasks"]
task8_4_info = []
task8_5 = ["tasks"]
task8_5_info = []
task8_6 = ["tasks"]
task8_6_info = []
task8_7 = ["tasks"]
task8_7_info = []
task8_8 = ["tasks"]
task8_8_info = []
task8_9 = ["tasks"]
task8_9_info = []

task9_1 = ["tasks"]
task9_1_info = []
task9_2 = ["tasks"]
task9_2_info = []
task9_3 = ["tasks"]
task9_3_info = []
task9_4 = ["tasks"]
task9_4_info = []
task9_5 = ["tasks"]
task9_5_info = []
task9_6 = ["tasks"]
task9_6_info = []
task9_7 = ["tasks"]
task9_7_info = []
task9_8 = ["tasks"]
task9_8_info = []

task10_1 = ["tasks"]
task10_1_info = []
task10_2 = ["tasks"]
task10_2_info = []
task10_3 = ["tasks"]
task10_3_info = []
task10_4 = ["tasks"]
task10_4_info = []
task10_5 = ["tasks"]
task10_5_info = []
task10_6 = ["tasks"]
task10_6_info = []
task10_7 = ["tasks"]
task10_7_info = []
task10_8 = ["tasks"]
task10_8_info = []
task10_9 = ["tasks"]
task10_9_info = []